@@ -1,5 +1,10 @@
 2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/i386/qemu/memory.h (grub_machine_mmap_init): Remove
+	redundant declaration.
+
+2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/net.h (grub_net_network_level_interfaces): Remove
 	redundant declaration.
 	(FOR_NET_NETWORK_LEVEL_INTERFACES): Move to appropriate place.
